<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue=""
        android:key="url"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/setting_url"/>

    <SeekBarPreference
        android:key="frequency"
        app:seekBarIncrement="60"
        app:updatesContinuously="true"
        app:showSeekBarValue="true"
        app:min="60"
        android:max="1440"
        android:defaultValue="60"
        android:title="@string/setting_frequency"/>

    <Preference
        android:key="now"
        android:title="@string/setting_now" />

    <Preference
        android:key="crawled"
        android:title="@string/setting_crawled"
        android:defaultValue="0"/>

    <Preference
        android:key="modified"
        android:title="@string/setting_modified"
        android:defaultValue="0" />

</PreferenceScreen>